# conan_pkg_type_test

./: CMakeLists.txt  README.md  conanfile.py
src/lib/stuff/: CMakeLists.txt  stuff.cpp
test_package/: CMakeLists.txt  conanfile.py
